--- a/config/cc36.conf
+++ b/config/cc36.conf
@@ -8,9 +8,12 @@ CONFIG_ZMK_POINTING=y
 
 # Don't show layer status
 #CONFIG_CUSTOM_WIDGET_BATTERY_STATUS=n
-CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
+#CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
 
 # Bluetooth tweaks
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Note: BT_MAX_CONN and BT_MAX_PAIRED are only active when BT is enabled
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
