--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,18 @@
 #
 ---
 include:
-  - board: planck_rev6
-  - board: corneish_zen_v2_left
-  - board: corneish_zen_v2_right
-  - board: glove80_lh
-  - board: glove80_rh
+  # CC36 - Main keyboard with nice_view displays
+  - board: cc36_left
+    snippet: studio-rpc-usb-uart
+    shield: nice_view
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+  - board: cc36_right
+    shield: nice_view
+    snippet: studio-rpc-usb-uart
+  # CC36 - Settings reset firmware
+  - board: cc36_left
+    shield: settings_reset
+    snippet: studio-rpc-usb-uart
+  - board: cc36_right
+    shield: settings_reset
+    snippet: studio-rpc-usb-uart
