--- a/draw/config.yaml
+++ b/draw/config.yaml
@@ -172,4 +172,4 @@ parse_config:
 draw_config:
   append_colon_to_layer_header: false
   dark_mode: auto
-  footer_text: "urob/zmk-config"
+  footer_text: "stphn/zmk-config-urob"
