--- a/config/cc36.conf
+++ b/config/cc36.conf
@@ -15,5 +15,6 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Note: BT_MAX_CONN and BT_MAX_PAIRED are only active when BT is enabled
-CONFIG_BT_MAX_CONN=3
-CONFIG_BT_MAX_PAIRED=3
+# Set to 4: 1 for split connection + 3 for external devices (BT0, BT1, BT2)
+CONFIG_BT_MAX_CONN=4
+CONFIG_BT_MAX_PAIRED=4
