refactor: disable studio and adjust smart mouse key positions

--- a/draw/config.yaml
+++ b/draw/config.yaml
@@ -25,8 +25,8 @@ parse_config:
     "&kp LG(LC(LS(A)))": Pin App
     "&kp LG(LC(LS(Q)))": Pin Win
 
-    "&swapper": Next Win
-    "&kp LS(TAB)": Prev Win
+    "&swapper": TAB ►
+    "&kp LS(TAB)": TAB ◄
     "&dot_spc": Sentence
     "&num_dance": { "t": "Numword", "s": "Sticky Num" }
     "&magic_shift": { "t": Magic, "h": "Shift" }
