--- a/config/boards/arm/cc36/Kconfig
+++ b/config/boards/arm/cc36/Kconfig
@@ -4,4 +4,4 @@ config BOARD_ENABLE_DCDC
 	bool "Enable DCDC mode"
 	select SOC_DCDC_NRF52X
 	default y
-	depends on (BOARD_CORNE_CHOC_PRO_LEFT || BOARD_CORNE_CHOC_PRO_RIGHT)
+	depends on (BOARD_CC36_LEFT || BOARD_CC36_RIGHT)
