refactor: rename board from cc36 to corne_choc_pro

--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,8 @@
 #
 ---
 include:
-  # CC36 - Main keyboard with nice_view displays
-  - board: cc36_left
+  # Corne Choc Pro - Main keyboard with nice_view displays
+  - board: corne_choc_pro_left
     shield: nice_view
-  - board: cc36_right
+  - board: corne_choc_pro_right
     shield: nice_view
