--- a/config/boards/arm/corne_choc_pro/corne_choc_pro.zmk.yml
+++ b/config/boards/arm/corne_choc_pro/corne_choc_pro.zmk.yml
@@ -12,5 +12,5 @@ outputs:
   - ble
 url: https://keebart.com/products/corne-wireless
 siblings:
-  - cc36_left
-  - cc36_right
+  - corne_choc_pro_left
+  - corne_choc_pro_right
