--- a/config/boards/arm/corne_choc_pro/corne_choc_pro.dtsi
+++ b/config/boards/arm/corne_choc_pro/corne_choc_pro.dtsi
@@ -8,7 +8,7 @@
 #include <nordic/nrf52840_qiaa.dtsi>
 #include <dt-bindings/zmk/matrix_transform.h>
 
-#include "cc36-layouts.dtsi"
+#include "corne_choc_pro-layouts.dtsi"
 
 &default_layout {
     transform = <&default_transform>;
